--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@ body {
     font-family: 'Lobster', cursive;
     font-family: 'Poppins', sans-serif;
 }
+
+.carousel-item img {
+    height: 35rem;
+}
